--- a/src/CSS/estilos.css
+++ b/src/CSS/estilos.css
@@ -1,7 +1,7 @@
 body {
     background-color: #0f131a;
     color: #ffffff;
-    background-image: url(/images/fondo.jpg);
+    background-image: url(../images/fondo.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -119,6 +119,7 @@ body {
     white-space: pre-wrap;
     word-wrap: break-word;
 }
+
 
 
 
